# mission-commander

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  build.sh  compose-dev.yaml  compose.yaml  docker-compose-prod.yml  docker-compose.yml  manage.py  pyproject.toml  update.sh
.github/workflows/: main.yaml
mc/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
mission_commander/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
mission_commander/rss/: admin.py  apps.py  tasks.py  urls.py
mission_commander/rss/forms/: feed.py  transmission_client.py
mission_commander/rss/models/: feed.py
mission_commander/rss/utils/: feed.py
mission_commander/rss/views/: __init__.py  auth.py  client.py  feed.py  once.py  torrent.py
rss/: admin.py  fields.py  forms.py  models.py  tasks.py  urls.py  views.py  widgets.py
rss/forms/: __init__.py  client.py  feed.py  login.py  torrent.py  transmission_client.py
rss/migrations/: 0001_initial.py  0001_squashed_0021_alter_feed_regex_filter.py  0002_feed_torrent_seen.py  0003_feed_download_dir_transmissionclient.py  0004_remove_torrent_contents_remove_torrent_info_hash_and_more.py  0005_alter_feed_expire_alter_transmissionclient_feeds.py  0006_remove_transmissionclient_feeds_and_more.py  0007_torrent_published.py  0008_feed_ignore_older_than_transmissionclient_name.py  0009_feed_ignore_newer_than_alter_feed_expire_and_more.py  0010_rename_expire_feed_expires_at.py  0011_transmissionclient_protocol_and_more.py  0012_feed_start_paused_alter_transmissionclient_password_and_more.py  0013_feed_regex_filter.py  0014_feed_chronological.py  0015_feed_last_activity_feed_name.py  0016_feed_enabled.py  0017_torrent_created_at_torrent_updated_at.py  0018_alter_torrent_options.py  0019_alter_feed_options_feed_created_at_feed_updated_at.py  0020_feed_last_added.py  0021_alter_feed_regex_filter.py  0022_alter_feed_created_at_alter_torrent_created_at.py  0023_feed_periodic_task.py
rss/models/: __init__.py  feed.py  torrent.py  transmission_client.py
rss/static/rss/: main.js  style.css
rss/templates/: base.html  login.html  navlinks.html  pagenav.html
rss/templates/auth/: form.html  login.html
rss/templates/client/: base.html  create.html  delete.html  form.html  list.html  update.html
rss/templates/feed/: base.html  create.html  delete.html  form.html  list.html  update.html
rss/templates/once/: base.html  create.html
rss/templates/rss/: base.html  client_create.html  client_delete.html  client_list.html  client_update.html  feed_list.html  login.html  torrent_list.html
rss/utils/: feed.py
rss/views/: __init__.py  auth.py  client.py  feed.py  once.py  torrent.py
rss/widgets/: date.py
scripts/: mc-beat.service  mc-web.service  mc-worker.service  setup.sh  update.sh
static/: style.css
(+25 files in other folders)
