[tool.poetry]
name = "mission-commander"
version = "0.2.0"
description = "RSS for Transmission torrent clients"
authors = ["Jure Vengušt <mission-commander@kaar.bid>"]
readme = "README.md"
packages = [{include = "mission_commander"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
django-environ = "^0.11.2"
transmission-rpc = "^7.0.3"
psycopg2-binary = "^2.9.9"
celery = "^5.4.0"
django-celery-beat = "^2.6.0"
redis = "^5.0.4"
ipython = "^8.24.0"
django-extensions = "^3.2.3"
feedparser = "^6.0.11"
gunicorn = "^22.0.0"
whitenoise = "^6.6.0"
django-regex-field = "^3.1.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
