[project]
name = "mission-commander"
version = "0.4.0"
description = "RSS for Transmission torrent clients"
authors = [{ name = "Jure Vengušt", email = "mission-commander@kaar.bid" }]
requires-python = ">=3.11,<4"
readme = "README.md"
dependencies = [
    "django==5.2.9",
    "django-environ==0.12.0",
    "transmission-rpc==7.0.11",
    "psycopg2-binary==2.9.11",
    "celery==5.6.0",
    "django-celery-beat==2.8.1",
    "redis==7.1.0",
    "django-extensions==4.1.0",
    "feedparser==6.0.12",
    "gunicorn>=23.0.0,<24",
    "whitenoise==6.11.0",
    "django-regex-field>=3.1.0,<4",
]

[dependency-groups]
dev = [
    "celery-types==0.23.0",
    "black==25.12.0",
    "ipython==9.8.0",
    "flake8==7.3.0",
    "pre-commit==4.5.0",
]

[tool.hatch.build.targets.sdist]
include = ["mission_commander"]

[tool.hatch.build.targets.wheel]
include = ["mission_commander"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
